--- a/style.css
+++ b/style.css
@@ -141,3 +141,15 @@ select {
   background: white;
   color: #135058;
 }
+
+.copyright {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  bottom: 15px;
+  width: 100%;
+  left: 0px;
+  height: 25px;
+}
